PUSH NOTE : 2024-12-02-来杯红茶-Facade模式.md

--- a/_posts/2024-12-02-来杯红茶-Facade模式.md
+++ b/_posts/2024-12-02-来杯红茶-Facade模式.md
@@ -16,9 +16,9 @@ tags:
 - 需要以一种特殊的方式与系统交互。  
 > 通过这个模式我们能够更容易地使用一个复杂的系统，要么只使用系统的一部分功能，要么是以特殊方式使用系统。  
   
-![a345a77f643d3e096a5cadb497aec24f.png](./assets/a345a77f643d3e096a5cadb497aec24f.png)  
+![f224391d4e5b23a7db06149fdbd89555.png](../assets/f224391d4e5b23a7db06149fdbd89555.png)  
   
-![e9b5c282fb6dfe4cb0f0278c706fbf2c.png](./assets/e9b5c282fb6dfe4cb0f0278c706fbf2c.png)  
+![2c11f4489a2926a9827dd3afa1f217f6.png](../assets/2c11f4489a2926a9827dd3afa1f217f6.png)  
   
 **解决方案**  
 Facade为原有系统的客户提供了一个新的接口。  
@@ -36,14 +36,13 @@ Facade模式简化了对所需子系统的使用过程。
 > [!caution] 需要注意的地方  
 > Facade模式只在使用系统的一部分功能，或者在以特殊方式与系统交互时才有效。  
 > 如果系统的所有功能都需要使用，那么除非最初的设计很糟，否则并无余地对设计进行改进。  
-  
 ## Facade模式的变体：  
   
 ### 减少客户必须处理的对象数量  
   
 Facade不仅可以用来通过方法调用创建更简单的接口，还能用来减少客户必须处理的对象数量。例如，假设有一个 Client 对象必须处理Database、Model、Element对象。Client必须首先通过 Database对象打开数据库，获取Model对象，然后再查询Model对象，获取Element对象，最后请求Element对象的信息。如果能够创建一个可供Client查询的Database Facade，那么以上过程将容易得多。  
   
-![69f81b1a175219c92d47bc60a42df4a0.png](./assets/69f81b1a175219c92d47bc60a42df4a0.png)  
+![ca7e280a7c8c5d3a10a7770596b8acbb.png](../assets/ca7e280a7c8c5d3a10a7770596b8acbb.png)  
   
 > [!NOTE] 让一个Facade为多个对象工作  
 > 如果Facade能够设计成无状态的（也就是说，其中没有存储状态），则一个Facade对象就能够被多个其他对象使用。  
