--- a/_posts/2024-12-02-来杯红茶-Facade模式.md
+++ b/_posts/2024-12-02-来杯红茶-Facade模式.md
@@ -16,9 +16,9 @@ tags:
 - 需要以一种特殊的方式与系统交互。  
 > 通过这个模式我们能够更容易地使用一个复杂的系统，要么只使用系统的一部分功能，要么是以特殊方式使用系统。  
   
-![f224391d4e5b23a7db06149fdbd89555.png](../assets/f224391d4e5b23a7db06149fdbd89555.png)  
+![f224391d4e5b23a7db06149fdbd89555.png](./img/f224391d4e5b23a7db06149fdbd89555.png)  
   
-![2c11f4489a2926a9827dd3afa1f217f6.png](../assets/2c11f4489a2926a9827dd3afa1f217f6.png)  
+![2c11f4489a2926a9827dd3afa1f217f6.png](./img/2c11f4489a2926a9827dd3afa1f217f6.png)  
   
 **解决方案**  
 Facade为原有系统的客户提供了一个新的接口。  
@@ -42,7 +42,7 @@ Facade模式简化了对所需子系统的使用过程。
   
 Facade不仅可以用来通过方法调用创建更简单的接口，还能用来减少客户必须处理的对象数量。例如，假设有一个 Client 对象必须处理Database、Model、Element对象。Client必须首先通过 Database对象打开数据库，获取Model对象，然后再查询Model对象，获取Element对象，最后请求Element对象的信息。如果能够创建一个可供Client查询的Database Facade，那么以上过程将容易得多。  
   
-![ca7e280a7c8c5d3a10a7770596b8acbb.png](../assets/ca7e280a7c8c5d3a10a7770596b8acbb.png)  
+![ca7e280a7c8c5d3a10a7770596b8acbb.png](./img/ca7e280a7c8c5d3a10a7770596b8acbb.png)  
   
 > [!NOTE] 让一个Facade为多个对象工作  
 > 如果Facade能够设计成无状态的（也就是说，其中没有存储状态），则一个Facade对象就能够被多个其他对象使用。  
