PUSH NOTE : 2025-01-09-Apriori 算法讲解.md

--- a/_posts/2025-01-09-Apriori 算法讲解.md
+++ b/_posts/2025-01-09-Apriori 算法讲解.md
@@ -5,6 +5,8 @@ blog: _posts
 share: true  
 ---  
 > Apriori 算法是一种经典的关联规则挖掘算法，主要用于发现数据集中的频繁项集（Frequent Itemsets），并基于这些频繁项集生成关联规则。该算法广泛应用于市场篮分析、推荐系统、股票关联分析等领域。  
+  
+  
 ## 1. 算法背景  
   
 在关联规则挖掘中，发现数据集中项与项之间的关联关系。  
@@ -19,13 +21,13 @@ Association rules analysis is a technique to uncover how items are associated to
 **Support**. This says how popular an itemset is, as measured by the proportion of transactions in which an itemset appears.  
 **Confidence**. This says how likely item Y is purchased when item X is purchased, expressed as {X -> Y}.  
 **Lift**. This says how likely item Y is purchased when item X is purchased, while controlling for how popular item Y is.  
-### （1）项集（Itemset）  
+### 项集（Itemset）  
 - 项集是数据集中的一组项的集合。例如，在超市购物数据中，{牛奶, 面包} 是一个项集。  
 - 项集的大小称为项集的长度。例如，{牛奶, 面包} 的长度为 2。  
-### （2）频繁项集（Frequent Itemset）  
+### 频繁项集（Frequent Itemset）  
 - 频繁项集是指在数据集中出现次数（支持度）大于或等于某个阈值（最小支持度，min_support）的项集。  
 - 例如，如果最小支持度为 0.5，那么在所有交易中，{牛奶, 面包} 出现的比例超过 50%，则它是一个频繁项集。  
-### （3）支持度（Support）  
+### 支持度（Support）  
 - 支持度是指某个项集在数据集中出现的频率。  
 - 计算公式：  
 $$  
@@ -34,7 +36,7 @@ $$
 - ∣A∪B∣ 表示同时包含 A 和 B 的交易数量。  
 - ∣T∣表示总交易数量。  
 - 例如，如果数据集中有 100 笔交易，其中有 30 笔交易包含 {牛奶, 面包}，则支持度为 0.3。  
-### （4）置信度（Confidence）  
+### 置信度（Confidence）  
 - 置信度是指在项集 A 出现的情况下，项集 B 也出现的概率。  
 - 计算公式：  
 $$  
@@ -42,7 +44,7 @@ $$
 $$  
 - ∣A∣ 表示包含 A 的交易数量。  
 - 例如，如果 {牛奶} 的支持度为 0.4，{牛奶, 面包} 的支持度为 0.3，则置信度为 0.75。  
-### （5）提升度（Lift）  
+### 提升度（Lift）  
 - 提升度衡量项集 A 的出现是否依赖于项集 B 的出现。  
 - 计算公式：  
 $$  
@@ -61,24 +63,24 @@ $$
   
 Apriori 算法的核心思想是利用频繁项集的性质：频繁项集的子集一定是频繁的。  
 基于这一性质，算法通过逐层生成候选集，并筛选出频繁项集。  
-### （1）步骤 1：生成频繁 1-项集（Frequent 1-Itemsets）  
+### 步骤 1：生成频繁 1-项集（Frequent 1-Itemsets）  
 - 扫描数据集，统计每个项的支持度，筛选出满足最小支持度的项，生成频繁 1-项集。  
 	- 扫描数据集，统计每个项的出现次数。  
 	- 根据最小支持度阈值，筛选出频繁 1-项集。  
-### （2）步骤 2：生成候选 k-项集（Candidate k-Itemsets）  
+### 步骤 2：生成候选 k-项集（Candidate k-Itemsets）  
 - 基于频繁 (k-1)-项集，通过连接操作生成候选 k-项集。  
 - 连接操作：如果两个 (k-1)-项集的前 k−2k−2 项相同，则可以将它们连接生成一个 k-项集。  
-### （3）步骤 3：剪枝（Pruning）  
+### 步骤 3：剪枝（Pruning）  
 - 检查候选 k-项集的所有 (k-1)-子集是否都是频繁的。如果不是，则删除该候选集。  
 	- 对于每个候选 k-项集，检查其所有 (k-1)-子集是否存在于频繁 (k-1)-项集中。  
 	- 如果不存在，则删除该候选集。  
-### （4）步骤 4：计算支持度  
+### 步骤 4：计算支持度  
 - 扫描数据集，计算候选 k-项集的支持度，筛选出满足最小支持度的频繁 k-项集。  
 	- 统计候选 k-项集在数据集中的出现次数。  
 	- 根据最小支持度阈值，筛选出频繁 k-项集。  
-### （5）步骤 5：重复生成和筛选  
+### 步骤 5：重复生成和筛选  
 - 重复步骤 2 到步骤 4，直到无法生成新的频繁项集。  
-### （6）步骤 6：生成关联规则  
+### 步骤 6：生成关联规则  
 - 基于频繁项集生成关联规则。  
 	- 对于每个频繁项集 XX，生成所有可能的非空子集 YY。  
 	- 计算置信度（Confidence）和提升度（Lift）。  
